--- a/index.html
+++ b/index.html
@@ -1,38 +1,19 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Medisean.GitHub.io by medisean</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Medisean.GitHub.io</h1>
-        <p>My Blog</p>
-
-
-        <p class="view"><a href="https://github.com/medisean">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h1>
-<a id="mediseangithubio" class="anchor" href="#mediseangithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>medisean.github.io</h1>
-
-<p>My Blog</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
+<head>
+<title>Zou Liangming's Blog</title>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+<body>
+		<!--start-header-section-->
+			<div class="header-section">
+				<div class="continer">
+					<img src="images/me.png">
+						<h1>Zou Liangming</h1>
+				</div>
+			</div>
+</body>
+</html> 
