Add tel and email

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 				<div class="continer">
 					<img src="images/me.png">
 						<h1>Zou Liangming</h1>
+						<h2>iOS developer</h2>
+						<h3>Tel: 18221145161 Email: <a href="Mailto:iangmingzou@163.com">liangmingzou@163.com</a></h3>
 				</div>
 			</div>
 </body>
