--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 						<h1>Zou Liangming</h1>
 						<h2>iOS developer</h2>
 						<h3>Tel: 18221145161 Email: <a href="Mailto:iangmingzou@163.com">liangmingzou@163.com</a></h3>
+						<a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fdownload.fir.im%2Fapps%2F5ca70d20959d69124233a8db%2Finstall%3Fdownload_token%3D93c6eb3879b1f5bc1c48ddb379d7c219">下载</a>
 				</div>
 			</div>
 </body>
